1 - Add CMIS 1.1 support 2 - Add Json Document Type Definition